--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,8 +1,14 @@
 <ion-header>
   <ion-navbar>
+
+    <button ion-button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
+
     <ion-title>
       Ionic Blank
     </ion-title>
+
   </ion-navbar>
 </ion-header>
 
