--- a/src/pages/input/input.html
+++ b/src/pages/input/input.html
@@ -28,5 +28,5 @@
 
   <button ion-button (click)="entrar()">Entrar</button>
   <p>{{login}}</p>
-  <p>((senha))</p>
+  <p>{{senha}}</p>
 </ion-content>
